# obstacle_avoidance

./: .gitignore  CMakeLists.txt  readme.md
config/: build.sh  config.sh  run.sh
examples/: CMakeLists.txt
examples/src/: gpio_rpi.cpp  recognize_forms.cpp  recognize_objects.cpp  video_recording.cpp
